src/test/ui/type-alias-impl-trait/associated-type-lifetime-ice.stderr
error: internal compiler error: unexpected concrete region in borrowck: ReEarlyBound(0, 'a)
  --> $DIR/associated-type-lifetime-ice.rs:29:5
   |
LL | /     fn f() -> Self::ImplTrait {
LL | |
LL | |         ()
LL | |     }
   | |_____^
   |
   = error: internal compiler error: unexpected panic

query stack during panic:
end of query stack
